statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ken-cypress
  namespace: cypress
  labels:
    app: ken-cypress
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: ken-cypress
  serviceName: ken-cypress
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  template:
    metadata:
      labels:
        app: ken-cypress
    spec:
      terminationGracePeriodSeconds: 10
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: purpose
                    operator: In
                    values:
                      - cypress
      containers:
        - name: ken-cypress
          image: klaytn/klaytn:v1.7.3
          imagePullPolicy: IfNotPresent
          args:
            - "ken"
            - "--cypress"
            - "--metrics"
            - "--prometheus"
            - "--multichannel"
            - "--rpc"
            - "--rpcapi=admin,debug,klay,miner,net,personal,rpc,txpool,web3"
            - "--rpcport=8551"
            - "--rpcaddr=0.0.0.0"
            - "--rpccorsdomain=*"
            - "--rpcvhosts=*"
            - "--ws"
            - "--wsapi=admin,debug,klay,miner,net,personal,rpc,txpool,web3"
            - "--wsaddr=0.0.0.0"
            - "--wsorigins=*"
            - "--datadir=/kend/cypress"
            - "--port=32323"
            - "--subport=32324"
            - "--srvtype=fasthttp"
            - "--verbosity=3"
            - "--syncmode=full"
            - "--maxconnections=10"
            - "--txpool.exec-slots.all=4096"
            - "--txpool.nonexec-slots.all=4096"
            - "--txpool.exec-slots.account=4096"
            - "--txpool.nonexec-slots.account=4096"
#            - "--sendertxhashindexing"
#            - "--state.tries-in-memory=50"
#            - "--state.trie-cache-limit=10240"
          ports:
            - containerPort: 8551
            - containerPort: 8552
          livenessProbe:
            httpGet:
              path: "/"
              port: 8551
            initialDelaySeconds: 15
            timeoutSeconds: 5
          volumeMounts:
            - name: kend
              mountPath: /kend
  volumeClaimTemplates:
    - metadata:
        name: kend
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: "io2"
        resources:
          requests:
            storage: 3000Gi
