ingress-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ken-cypress-ingress
  namespace: cypress
  annotations:
    kubernetes.io/ingress.class: example
spec:
  rules:
    - host: api.cypress.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ken-cypress-service
                port:
                  number: 80
